--- a/ProyCalculadora/src/main/resources/templates/result.html
+++ b/ProyCalculadora/src/main/resources/templates/result.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Resultado de la operación</title>
+	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+<meta charset="UTF-8">
+<title>Resultado de la operaciÃ³n</title>
 </head>
 <body>
 
+	<div class="container">
 	
-
+		<p class="text-center text-primary" th:text="${calculadora.mensaje}"></p>
+	
+	</div>
+	
 </body>
 </html>
